Added cfs features

--- a/views/InfoUpdate.ejs
+++ b/views/InfoUpdate.ejs
@@ -21,8 +21,11 @@
                             <h1>Cập nhật thông tin cá nhân</h1>
                             <hr>
                               <div class="form-row">
-                                  <div class="col-sm-12">
+                                  <div class="col-sm-12 col-md-6">
                                       <div class="form-group"><label>Tên</label><input class="form-control" type="text" name="name"></div>
+                                  </div>
+                                  <div class="col-sm-12 col-md-6">
+                                      <div class="form-group"><label>Ban</label><input class="form-control" type="text" name="role"></div>
                                   </div>
                                   <div class="col"><label>Số điện thoại</label><input class="form-control" type="text" name="phone"></div>
                                   <div class="col-sm-12 col-md-6">
@@ -39,7 +42,7 @@
                               </div>
                               <hr>
                               <div class="form-row">
-                                  <div class="col-md-12 content-right"><button class="btn btn-primary form-btn" type="submit">LƯU</button><button class="btn btn-danger form-btn" type="reset">HỦY</button></div>
+                                  <div class="col-md-12 content-right"><button class="btn btn-primary form-btn mr-1" type="submit">LƯU</button><button class="btn btn-danger form-btn" type="reset">HỦY</button></div>
                               </div>
                         </div>
                     </div>
