--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us - Brand</title>
+    <title>JS Club</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
@@ -28,9 +28,13 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link logo" href="/">trang chủ</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">bài viết&nbsp;</a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/post-list">Tin Tức</a><a class="dropdown-item" role="presentation" href="#">Confession</a></div>
-                    </li>
+                    <% if (login == 1) { %>
+                      <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">bài viết&nbsp;</a>
+                          <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/post-list">Tin Tức</a><a class="dropdown-item" role="presentation" href="/confession">Confession</a></div>
+                      </li>
+                    <% } else { %>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/post-list">Tin tức</a></li>
+                    <% } %>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/training">Training</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="/about-us">VỀ CHÚNG TÔI</a></li>
                     <% if (login != 1) { %>
