--- a/views/header.ejs
+++ b/views/header.ejs
@@ -36,7 +36,7 @@
                       <li class="nav-item" role="presentation"><a class="nav-link" href="/post-list">Tin tức</a></li>
                     <% } %>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/training">Training</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/about-us">VỀ CHÚNG TÔI</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us">VỀ CHÚNG TÔI</a></li>
                     <% if (login != 1) { %>
                       <li class="nav-item" role="presentation"><a class="nav-link" href="/login">đăng nhập</a></li>
                       <li class="nav-item" role="presentation"><a class="nav-link" href="/registration">ĐĂNG KÝ</a></li>
