--- a/views/confession.ejs
+++ b/views/confession.ejs
@@ -12,9 +12,9 @@
       </div>
       <div class="card-footer">
         <div class="media">
-          <form method="POST" action="/addComment1">
+          <form method="POST" action="/addComment1" style="width:100%">
             <div class="form-group"><label for="text">Thêm comment</label><textarea class="form-control item" type="text"
-                id="text" name="text" style="width:1000px"></textarea></div>
+                id="text" name="text" style="width:100%"></textarea></div>
             <input type="text" name="cfsId" value="<%= i._id %>" style="display: none;">
             <button class="btn btn-primary btn-block" type="submit">Tạo comment</button>
             <br>
