--- a/views/post.ejs
+++ b/views/post.ejs
@@ -15,9 +15,9 @@
       <div class="card-footer">
         <div class="media">
           <% if (login == 1) { %>
-          <form method="POST" action="/addComment">
-            <div class="form-group"><label for="text">Thêm comment</label><textarea class="form-control item" type="text"
-                id="text" name="text" style="width:1000px"></textarea></div>
+          <form method="POST" action="/addComment" style="width:100%">
+            <div class="form-group" style="width:100%"><label for="text">Thêm comment</label><textarea class="form-control item" type="text"
+                id="text" name="text" style="width:100%; height: 8rem; min-width: 0;"></textarea></div>
             <input type="text" name="postId" value="<%= i._id %>" style="display: none;">
             <button class="btn btn-primary btn-block" type="submit">Tạo comment</button>
             <br>
@@ -37,11 +37,7 @@
         <% } %>
       </div>
     </div>
-    <% if (login == 1) { %>
-      <form action="addConfession">
-        <button class="btn btn-primary btn-lg" type="submit">Thêm confession</button>
-      </form>
-    <% } %>
+    
   </section>
 </main>
 <script>
