--- a/views/addConfession.ejs
+++ b/views/addConfession.ejs
@@ -7,7 +7,7 @@
       </div>
       <form method="POST" action="/addedConfession" style="
       margin: auto;
-      width: 1000px;max-width: 1000px;">
+      width: 100%;max-width: 100%;">
         <div class="form-group"><label for="confes">Bạn muốn nói gì để chúng mình up lên JS Confessions nào?</label><textarea class="form-control item" type="text" id="confes"
           name="text"></textarea></div>
         </br>
