fix javascript frontend bugs

--- a/views/post-list.ejs
+++ b/views/post-list.ejs
@@ -33,14 +33,12 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid dmmImg2" src=""></div>
-                            <p class="dmpivot2"><%= i.imgPath %></p>
+                            <div class="col-lg-5"><img class="rounded img-fluid dmmImg2" src="<%= i.imgPath %>"></div>
                             <div class="col-lg-7">
                                 <h3><%= i.name %></h3>
                                 <div class="info"><span class="text-muted"><%= i.date %> by&nbsp;<a href="#"><%= i.createdBy %></a></span></div>
                                 <%- i.brief %><br><br>
-                                <p class="dmpivot3"><%= i._id %></p>
-                                <form class="dmmImg3" action="/post/i._id" method="GET" style="display: inline;">
+                                <form class="dmmImg3" action="/post/<%= i._id %>" method="GET" style="display: inline;">
                                   <button class="btn btn-outline-primary btn-sm mr-1" type="submit">Read More</button>
                                 </form>
                                 <% if (admin == 1) {%>
@@ -66,20 +64,4 @@
             </div>
         </section>
     </main>
-    <script>
-      let a = document.getElementsByClassName("dmpivot2");
-      let b = document.getElementsByClassName("dmmImg2");
-      for (let i in a) {
-        b[i].setAttribute("src", a[i].textContent)
-        a[i].hidden = true
-      }
-    </script>
-    <script>
-      let c = document.getElementsByClassName("dmpivot3");
-      let d = document.getElementsByClassName("dmmImg3");
-      for (let i in c) {
-        d[i].setAttribute("action", "/post/" + c[i].textContent)
-        c[i].hidden = true
-      }
-    </script>
 <%- include("footer"); -%>
